# web_tools_rs

./: .env  Cargo.toml
assets/: board.txt
migrations/: 20230918135627_init.sql  20230918142715_update.sql  20230918143733_modify_to_serial.sql
src/: main.rs
templates/: base.html  board.html  board_edit.html  hello_world.html  style.css
